2009-06-14  Paul Smith  <psmith@gnu.org>

	* remake.c (update_file_1): Remember the original file we marked
	as updating, so we can clear that flag again.  If we find a target
	via vpath, FILE might change.
	(check_dep): Ditto.  Fixes Savannah bug #13529.
	Patch by Reid Madsen <reid.madsen@tek.com>.

2009-06-13  Paul Smith  <psmith@gnu.org>

	* doc/make.texi (MAKEFILES Variable): Be explicit that files
	included by MAKEFILES cannot give default goals.
	* read.c (eval): If set_default is not set, pass the no-default-goal
	value when we read included makefiles.  Fixes Savannah bug #13401.

	* ar.c (ar_name): Ensure that targets with empty parens aren't
	considered archive member references: archive members must have a
	non-empty "member" string.  Fixes Savannah bug #18435.

	* function.c (string_glob): Rely on multi_glob() to determine
	whether files exist or not.  Remove call to file_exists_p() which
	is not always correct.  Fixes Savannah bug #21231.
	* read.c (multi_glob): Add a new argument EXISTS_ONLY; if true
	then only files that really exist will be returned.
	* dep.h: Add new argument to multi_glob().
	* rule.c (install_pattern_rule): Ditto.
	* read.c (eval): Ditto.
	* main.c (main): Ditto.
	* implicit.c (pattern_search): Ditto.
	* file.c (parse_prereqs): Ditto.
	* default.c (set_default_suffixes): Ditto.

2009-06-09  Paul Smith  <psmith@gnu.org>

	* commands.c (set_file_variables): If always_make_flag is set,
	always add the prereq to $?.  Fixes Savannah bug #17825.

	* remake.c (update_file_1): When rebuilding deps of FILE, also try
	to rebuild the deps of all the also_make targets for that file.
	Fixes Savannah bug #19108.

	* implicit.c (pattern_search): Undo test for is_target, added by
	BorisK on 21 Sep 2004.  This goes against step 5c in the "Implicit
	Rule Search Algorithm".  Fixes Savannah bug #17752.

	* main.c (clean_jobserver): Clear the jobserver_fds options and
	set job_slots to the default when we clean up.