@@ -1,3 +1,10 @@
+2006-07-04  Eli Zaretskii  <eliz@gnu.org>
+
+	* function.c (IS_ABSOLUTE, ROOT_LEN): New macros.
+	(abspath): Support systems that define HAVE_DOS_PATHS (have
+	drive letters in their file names).  Use IS_PATHSEP instead of a
+	literal '/' comparison.
+
 2009-06-14  Paul Smith  <psmith@gnu.org>
 
 	* remake.c (update_file_1): Remember the original file we marked
